--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
       <!-- categorials container end -->
          </section>
     </header>
+    <main class="container">
 
 
-   
+     </main>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
   </body>
