--- a/index.html
+++ b/index.html
@@ -43,7 +43,26 @@
          </section>
     </header>
     <main class="container">
-
+      <section>
+        <!-- Modal -->
+                 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                   <div class="modal-dialog">
+                     <div class="modal-content">
+                       <div class="modal-header">
+                         <h5 class="modal-title" id="newsDetailsLabel"></h5>
+                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                       </div>
+                       <div id="modal-pop" class="modal-body">
+                       </div>
+                       <div class="modal-footer">
+                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </section>
+              <h3 class="my-4 mx-2 bg-white p-3 rounded-3 shadow-sm p-3 mb-5 bg-body rounded"> <span id="found-news"></span> items found for this category</h3>
+              
 
      </main>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
