--- a/index.html
+++ b/index.html
@@ -62,7 +62,19 @@
                  </div>
                </section>
               <h3 class="my-4 mx-2 bg-white p-3 rounded-3 shadow-sm p-3 mb-5 bg-body rounded"> <span id="found-news"></span> items found for this category</h3>
+      <!-- News Section -->
+        <section class="my-5 mx-4">
+          <div id="news-container">
+           
+          </div>
+
+        <div id="no-news-message" class="d-none">
+            <h3 class="text-warning">No News Found For this category..Please click a new category.</h3>
+         </div>
+      </section>
+   <!-- news section end      -->    
               
+
 
      </main>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
