--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
          </div>
       </section>
    <!-- news section end      -->    
-              
+       <!-- loading spinner while clicking button -->
+<section  id="loader" class="d-none">
+  <div style="height:400px" class="d-flex justify-content-center align-items-center">
+     <div class="spinner-border text-primary" role="status">
+       <span class="visually-hidden">Loading...</span>
+     </div>
+   </div> 
+</section>
+<!-- loading spinner end -->        
 
 
      </main>   
